--- a/main.html
+++ b/main.html
@@ -5,10 +5,12 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Development Welcome</title>
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="text"> "Welcome to the world of Web development>" </div>
+	<div id="text">Welcome to the world of Web development></div>
 		
 
 	
